--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ NODE_ENV=development
 # Database Configuration
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=
+DB_PASSWORD=Dineep123
 DB_NAME=collab_coding
 DB_PORT=3306
 
