--- a/real-collab/render.yaml
+++ b/real-collab/render.yaml
@@ -32,6 +32,8 @@ services:
         value: production
       - key: PORT
         value: 10000
+      - key: DISABLE_AUTH
+        value: true
       - key: DB_HOST
         fromService:
           type: pserv
